<resources>
    <string name="app_name">CouplesBudgeting</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="table_layout_4_open">Income</string>
    <string name="table_layout_4_open_shortcut">$100</string>
    <string name="table_layout_4_save">Expenditures</string>
    <string name="table_layout_4_save_shortcut">$1000</string>
    <string name="income_title">Income</string>
    <string name="income_title_value">$0</string>
    <string name="income_value">$0</string>
    <string name="expenditures_title">Expenditures</string>
    <string name="expenditures_value">$0</string>
    <string name="savings_title">Savings</string>
    <string name="savings_value">$0</string>
    <string name="total_title">Total</string>
    <string name="total_value">$0</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_goals">Goals</string>
    <string name="title_reports">Reports</string>
    <string name="bouple">Bouple</string>
    <string name="transactions">Transactions</string>
    <string name="add_transaction">+ Add Transaction</string>
    <string name="search_transactions">Search Transactions</string>
    <string name="report_page_title">Reports</string>
    <string name="reports_page_timeframe">Monthly Report</string>
    <string name="goals_page_title">Goals</string>
    <string name="add_goal">Add Goal</string>
    <string name="login">LogIn</string>
    <string name="sign_up">Sign Up</string>
    <string name="type">Type</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
</resources>