<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Linear_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:paddingBottom="15dp"
    tools:context=".ui.dashboard.DashboardFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_sans_extrabold"
        android:layout_marginBottom="20dp"
        android:text="@string/title_transactions"
        android:textAlignment="center"
        android:textColor="@color/Dark_Pistachio"
        android:textSize="55sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_trans_button_trans_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@drawable/rounded_corner_white"
        android:fontFamily="@font/fira_sans_extrabold"
        android:text="@string/add_transaction"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/Blue"
        android:textSize="28sp"
        tools:text="Add Transaction" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/refreshButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rounded_corner_white"
            android:src="@drawable/refresh_icon"
            />

        <SearchView
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_white"
            android:queryHint="@string/search_transactions"
            android:iconifiedByDefault="false"
            android:layout_marginVertical="20dp"
            >
        </SearchView>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/transactionRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>