<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.start.startPage.StartFragment"
    android:background="@color/Blue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/startPageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="630dp"
            android:text="@string/bouple"
            android:textAlignment="center"
            android:textColor="@color/Light_Pistachio"
            android:textSize="60sp"
            android:textStyle="bold"
            android:fontFamily="@font/fira_sans_extrabold"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="115dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="250dp"
            android:src="@drawable/start_popsicle"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logInNavigateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="156dp"
            android:layout_marginEnd="161dp"
            android:layout_marginBottom="131dp"
            android:background="@drawable/rounded_corner_log_in"
            android:textColor="@color/Blue"
            android:text="@string/login" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpNavigateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="155dp"
            android:layout_marginEnd="162dp"
            android:layout_marginBottom="54dp"
            android:background="@drawable/rounded_corner_log_in"
            android:textColor="@color/Blue"
            android:text="@string/sign_up" />
    </RelativeLayout>

</FrameLayout>